Fix bug with cross-fold files not being distinct (needs testing)