@@ -1,5 +1,7 @@
 package org.insightcentre.uld.naisc.util;
 
+import java.lang.reflect.InvocationTargetException;
+
 /**
  * Automatically load a service by name.
  * 
@@ -10,11 +12,11 @@ public class Services {
     private Services() { }
     public static <A> A get(Class<A> clazz, String name) {
        try {
-           return (A)Class.forName("org.insightcentre.uld.naisc." + name).newInstance();
-       } catch(ClassNotFoundException | IllegalAccessException | InstantiationException x) {
+           return (A)Class.forName("org.insightcentre.uld.naisc." + name).getConstructor().newInstance();
+       } catch(ClassNotFoundException | IllegalAccessException | InstantiationException | NoSuchMethodException | InvocationTargetException x) {
            try {
-                return (A)Class.forName(name).newInstance();
-            } catch(ClassNotFoundException | IllegalAccessException | InstantiationException x2) {
+                return (A)Class.forName(name).getConstructor().newInstance();
+            } catch(ClassNotFoundException | IllegalAccessException | InstantiationException | NoSuchMethodException | InvocationTargetException x2) {
                 throw new RuntimeException("Could not load service: " + name, x2);
             }
        }
